<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen"
    android:backgroundTintMode="screen"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity"

    >

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="644dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="39dp"
        android:text="@string/segunda_atividade"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView0001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="270dp"
        android:text="@string/hello_word_this_is_my_first_app_on_andoidstudio"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="234dp"
        android:layout_marginBottom="467dp"
        android:text="@string/a_op_o_selecionada_foi"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView0001" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="6dp"
        android:text="@string/op_o"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintBottom_toTopOf="@+id/btnOpcao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@+id/textView0001" />

    <Button
        android:id="@+id/btnOpcao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="410dp"
        android:text="@string/op_es"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

</androidx.constraintlayout.widget.ConstraintLayout>